--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Tektur:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Junge&family=Long+Cang&family=Love+Ya+Like+A+Sister&family=Luckiest+Guy&family=Monoton&family=Peralta&family=Tektur:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>HSA 15: The Price Is Life</title>
   </head>
   <body>
